--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "rust_pig_latin"
 version = "0.1.0"
-edition = "2021"
+authors = ["Alexander (Sasha) Kharitonov <a.haritonov.web@gmail.com>"]
+license = "MIT"
 
 [dependencies]
